# rust_micro_service

./: Cargo.toml  orm.sql  readme.txt
account/: Cargo.toml  build.rs
account/src/: lib.rs
account/src/config/: app_config.rs  local_cache.rs  mod.rs  sentinel.rs  snowflake.rs  status_code.rs
account/src/entities/: mod.rs  prelude.rs  wb_user_info.rs  wb_user_phone.rs
account/src/handler/: mod.rs  user.rs  user_rpc.rs
account/src/middleware/: jwt.rs  limiter.rs  mod.rs
account/src/model/: mod.rs  user.rs
account/src/proto/: account.proto  account.rs
account/src/router/: mod.rs  user.rs
account/src/service/: user.rs
account/src/utils/: error.rs  mod.rs  time.rs  validate.rs
feed/: Cargo.toml
feed/src/: lib.rs
feed/src/config/: mod.rs
feed/src/entities/: mod.rs  prelude.rs  wb_feed.rs  wb_followee.rs  wb_follower.rs  wb_post.rs  wb_post_index.rs  wb_super_follower.rs
feed/src/handler/: feed.rs  post.rs
feed/src/middleware/: jwt.rs
feed/src/model/: feed.rs  followee.rs  follower.rs  mod.rs  post.rs  post_index.rs  super_follower.rs
feed/src/router/: feed.rs  mod.rs  post.rs
feed/src/service/: feed.rs  mod.rs  post.rs
feed/src/types/: mod.rs  post_message.rs
feed/src/utils/: crypto.rs  jwt.rs  result.rs  warp.rs
follow/: Cargo.toml  app.toml
follow/src/: lib.rs
follow/src/config/: app_config.rs  mod.rs  status_code.rs
follow/src/handler/: follower.rs  mod.rs
follow/src/middleware/: jwt.rs
follow/src/model/: follower.rs  mod.rs
follow/src/router/: follower.rs  mod.rs
follow/src/service/: follower.rs  mod.rs
follow/src/utils/: jwt.rs
tools/: Cargo.toml
tools/src/: lib.rs
tools/src/grpc/: channel.rs
tools/src/mq/: consumer.rs  mod.rs  producer.rs
tools/src/service/: discovery.rs  mod.rs  register.rs
tools/src/trace/: mod.rs
