[package]
name = "account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tools = { path = "../tools"}
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers"] }
chrono = "0.4.31"
futures-util = "0.3.30"
jsonwebtoken = "9.1.0"
moka = { version = "0.12.7", features = ["sync"] }
prost = "0.12.4"
regex = { version = "1.10.2", features = [] }
rust-crypto = "0.2.36"
rustis = "0.13.1"
sea-orm = { version = "0.12.6", features = ["sqlx-mysql", "macros", "runtime-tokio-native-tls"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tonic = "0.11.0"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.16.1", features = ["derive"] }
etcd-client = "0.12.4"
async_singleflight = "0.5.2"
sentinel-core = "0.1.3"

hyper = "0.14"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic", "default"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }

[build-dependencies]
tonic-build = "0.11.0"
