[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
etcd-client = "0.12.4"
futures-util = "0.3.30"
kafka = "0.10.0"
moka = { version = "0.12.7", features = ["future"] }
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
tower = "0.4.13"
tracing-subscriber = "0.3.18"
hyper = "0.14"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic", "default"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
prost = "0.12.3"
serde_json = "1.0.115"
